# nbdmux

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
deploy/: Containerfile  compose.yml  envvars.example
src/nbdmux/: __init__.py  _api.py  _app.py  _events_log.py  _settings_store.py  _table_state.py  client.py  server.py
src/nbdmux/_templates/ui/: _layout.html  _table_macros.html  dashboard.html  events.html  exports.html  login.html  settings.html
tests/: test_fastapi_admin_forms.py  test_fastapi_api.py  test_fastapi_events.py  test_fastapi_scaffold.py  test_fastapi_settings_persistence.py  test_fastapi_ui_pages.py  test_fastapi_uvicorn_smoke.py  test_nbdmux.py
