[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nbdmux"
dynamic = ["version"]  # single source of truth: src/nbdmux/__init__.py:__version__
description = "HTTP-controlled NBD-export multiplexer for a small lab (boot Linux images over the network with overlayfs+tmpfs writes)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Simon A. F. Lund", email = "safl@safl.dk" }]
keywords = ["nbd", "netboot", "ramboot", "overlayfs", "lab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Boot",
    "Topic :: System :: Filesystems",
]
dependencies = [
    # v0.3.0 shipped the FastAPI port -- the UI + JSON control plane
    # moved off stdlib http.server. Same stack as the sibling
    # services (bty-web, withcache) so the trio has one set of
    # test-client + template + auth patterns. Client (nbdmux.client)
    # stays stdlib-only so downstream consumers (bty) don't inherit
    # the framework floor.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    # Form-encoded POST parsing behind ``Form()`` deps.
    "python-multipart>=0.0.9",
    # Session cookie signing (SessionMiddleware).
    "itsdangerous>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # FastAPI's TestClient uses httpx as its transport at runtime;
    # not required for the daemon itself, so kept in dev only.
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/safl/nbdmux"

[project.scripts]
nbdmux-server = "nbdmux.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nbdmux"]

[tool.hatch.version]
path = "src/nbdmux/__init__.py"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
